cmake_minimum_required(VERSION 3.22)
project(Cub3D C)

set(CMAKE_C_STANDARD 11)

include_directories(GNL)
include_directories(includes)
include_directories(libft)
include_directories(minilibx_macos)
include_directories(sources)

add_executable(Cub3D
        GNL/get_next_line.c
        GNL/get_next_line.h
        GNL/get_next_line_utils.c
        includes/cub3d.h
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_calloc.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd_back.c
        libft/ft_lstadd_front.c
        libft/ft_lstclear.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstlast.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstsize.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar_fd.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr_fd.c
        libft/ft_split.c
        libft/ft_strchr.c
        libft/ft_strdup.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmapi.c
        libft/ft_strncmp.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strtrim.c
        libft/ft_substr.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        minilibx_macos/font.c
        minilibx_macos/mlx.h
        minilibx_macos/mlx_init_loop.m
        minilibx_macos/mlx_int.h
        minilibx_macos/mlx_int_str_to_wordtab.c
        minilibx_macos/mlx_new_image.m
        minilibx_macos/mlx_new_window.h
        minilibx_macos/mlx_new_window.m
        minilibx_macos/mlx_rgb.c
        minilibx_macos/mlx_shaders.c
        minilibx_macos/mlx_xpm.c
        sources/algorithm.c
        sources/drawing_part.c
        sources/free.c
        sources/graphical_part.c
        sources/main.c
        sources/parsing.c
        sources/utils.c)
